# mvp

./: .dockerignore  .gitignore  LICENSE  README.md  requirements.txt
.github/workflows/: build.yml
backend/: .env.github  README.md  app.py  config.py  extensions.py  pyproject.toml
backend/blueprints/: README.md  auth.py  order.py  product_details.py  products.py  user.py
backend/helpers/: errors.py  mail_gateway.py  paypal_gateway.py  utils.py
backend/middleware/: auth.py
backend/models/: __init__.py  role.py  user.py
backend/models/mongodb/: init_script.py  mongobase.py  order.py  product.py  product_details.py  role.py  token.py  user.py
backend/models/sqlalchemy/: role.py  token.py  user.py
backend/payment/gateways/: base.py  paypal_gateway.py
backend/payment/services/: order_service.py  payment_service.py
backend/repositories/: order.py  product.py  product_details.py  role.py  user.py
backend/scripts/: setup.py
backend/services/: auth.py  order.py  product.py  product_details.py  role.py
backend/tests/: conftest.py  test_auth.py  test_payment.py  test_product_details.py  test_products.py  test_role.py  test_user.py
backend/tests/blueprints/: test_auth.py
backend/tests/models/: test_role.py  test_user.py
backend/tests/payment/: test_payment.py
backend/tools/docker/: Dockerfile  README.md
react-frontend/: .gitignore  .prettierrc  eslint.config.js  eslint.config.mjs  jsconfig.json  jsconfig.node.json  package.json  vite.config.mjs
react-frontend/.husky/: pre-commit
react-frontend/src/: App.jsx  context.js  store.js
tests/: test_auth.py  test_user.py
(+92 files in other folders)
